// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostsTemplate /> should match snapshot 1`] = `
.c0 {
  width: 100%;
  max-width: 130rem;
  margin-left: auto;
  margin-right: auto;
  padding-left: calc(3.2rem / 2);
  padding-right: calc(3.2rem / 2);
}

.c9 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c13 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: none;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c18 {
  display: grid;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  grid-template-columns: 1fr 1fr;
  gap: 2.4rem;
}

.c18 .c8 {
  color: #333333;
  margin-top: 0;
  margin-bottom: 1.6rem;
}

.c18 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c18 a:hover {
  color: #dc143c;
}

.c19 {
  position: relative;
  padding-bottom: 56.25%;
}

.c20 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: contain;
  -webkit-transition: opacity 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out;
}

.c20:hover {
  opacity: 0.8;
}

.c21 {
  opacity: 0.6;
  margin-bottom: 0.8rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1.6rem;
}

.c21 span {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 span > svg {
  margin-right: 0.8rem;
}

.c22 {
  max-width: 100%;
}

.c16 {
  width: 100%;
  margin: 0 auto;
}

.c17 {
  margin: 0 auto;
  display: grid;
  grid-template-columns: 1fr;
  gap: 6.4rem;
}

.c24 {
  font-size: calc(1.6rem + 0.2rem);
  line-height: 1.5;
}

.c24 p {
  margin: 4.0rem 0;
}

.c24 a,
.c24 a:visited,
.c24 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c24 a:hover {
  -webkit-filter: brightness(0.8);
  filter: brightness(0.8);
}

.c24 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c24 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  width: 100%;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c24 pre code {
  color: inherit;
  background: inherit;
}

.c24 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c24 img {
  max-width: 100%;
}

.c24 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c24 .image figcaption {
  font-size: 1.6rem;
  padding: 0.8rem;
  text-align: center;
  line-height: 1.3;
}

.c24 ul,
.c24 ol {
  margin: 2.4rem 4.0rem;
}

.c24 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c24 table {
  width: 100%;
  border-collapse: collapse;
  margin: 2.4rem 0;
}

.c24 table td,
.c24 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c24 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c23 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c23 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c25 {
  cursor: pointer;
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c11 > img {
  height: 15rem;
  width: 15rem;
  border-radius: 50%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 6.4rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
  gap: 3rem;
}

.c7 .c8 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c7 .c10 > img {
  border-radius: 50%;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 48rem;
}

.c3 {
  background: #000000;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 1;
  width: 100%;
  max-width: 26rem;
  height: 100vh;
  top: 0;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  left: -24rem;
  overflow-y: hidden;
}

.c4 {
  margin: 4.8rem auto;
  width: 100%;
}

.c1 {
  position: fixed;
  top: 2.4rem;
  background: #000000;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  left: 0.5rem;
  top: 2rem;
  color: #FFFFFF;
}

.c5 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.c5:hover {
  border-color: #dc143c;
  color: #dc143c;
}

.c6 {
  margin-top: 6.4rem;
}

.c14 {
  margin-bottom: 6.4rem;
}

.c15 {
  display: grid;
  grid-template-columns: 70% 30%;
}

@media (min-width:768px) {
  .c0 {
    padding-left: calc(3.2rem * 0.7);
    padding-right: calc(3.2rem * 0.7);
  }
}

@media (max-width:768px) {
  .c9 {
    font-size: calc(1.6rem * 1.2);
  }
}

@media (max-width:768px) {
  .c13 {
    font-size: calc(1.6rem * 1.2);
  }
}

@media (max-width:600px) {
  .c18 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c21 {
    font-size: calc(0.8rem * 1.6);
  }
}

@media (min-width:768px) {
  .c24 .image-style-side {
    float: right;
    max-width: 50%;
    margin: 2.4rem;
  }
}

@media (max-width:768px) {
  .c24 {
    font-size: 2rem;
  }
}

@media (max-width:450px) {
  .c11 > img {
    height: 10rem;
    width: 10rem;
  }
}

@media (max-width:450px) {
  .c7 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    gap: 1rem;
  }

  .c7 .c8 {
    text-align: center;
  }
}

@media (max-width:768px) {
  .c3 {
    left: -26rem;
  }
}

@media (max-width:768px) {
  .c1 {
    left: 0rem;
  }
}

@media (max-width:1170px) {
  .c15 {
    grid-template-columns: 1fr;
  }
}

<div>
  <div
    class="c0"
  >
    <a
      aria-label="Open or close menu"
      class="c1"
      href="#"
      title="Open menu"
    >
      <svg
        aria-hidden="true"
        aria-label="Open menu"
        class="c2"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </a>
    <main
      aria-hidden="true"
      class="c3"
    >
      <nav
        class="c4"
      >
        <a
          class="c5"
          href="/"
          target="_self"
        >
          home
        </a>
        <a
          class="c5"
          href="/contact"
          target="_self"
        >
          contact
        </a>
      </nav>
    </main>
    <div
      class="c6"
    >
      <div
        class="c0"
      >
        <header
          class="c7"
        >
          <h1
            class="c8 c9"
          >
            <a
              class="c10 c11"
              href="/"
              target="_self"
            >
              <img
                alt="Pedro Coelho Blog"
                src="/assets/images/me.jpg"
              />
            </a>
          </h1>
          <div
            class="c12"
          >
            <h2
              class="c8 c13"
            >
              Pedro Coelho
            </h2>
            <p
              class=""
            >
              Uma descrição para o seu blog.
            </p>
          </div>
        </header>
      </div>
    </div>
    <div
      class="c14"
    >
      <div
        class="c15"
      >
        <div
          class="c0"
        >
          <div
            class="c16"
          >
            <div
              class="c17"
            >
              <div
                class="c18"
              >
                <div
                  class="c19"
                >
                  <a
                    href="/post/al-sadd-anuncia-acordo-para-liberar-xavi-mas-barcelona-nega"
                  >
                    <img
                      alt=""
                      class="c20"
                      src="https://res.cloudinary.com/rabbitz/image/upload/v1636129235/Xavi_Hernandez_Barcelona_c60f5b3e16.jpg"
                    />
                  </a>
                </div>
                <div
                  class=""
                >
                  <div
                    class="c21"
                  >
                    <span>
                      <svg
                        aria-hidden="true"
                        class="c2"
                        fill="currentColor"
                        focusable="false"
                        height="18"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM7.07 18.28c.43-.9 3.05-1.78 4.93-1.78s4.51.88 4.93 1.78C15.57 19.36 13.86 20 12 20s-3.57-.64-4.93-1.72zm11.29-1.45c-1.43-1.74-4.9-2.33-6.36-2.33s-4.93.59-6.36 2.33A7.95 7.95 0 014 12c0-4.41 3.59-8 8-8s8 3.59 8 8c0 1.82-.62 3.49-1.64 4.83zM12 6c-1.94 0-3.5 1.56-3.5 3.5S10.06 13 12 13s3.5-1.56 3.5-3.5S13.94 6 12 6zm0 5c-.83 0-1.5-.67-1.5-1.5S11.17 8 12 8s1.5.67 1.5 1.5S12.83 11 12 11z"
                        />
                      </svg>
                      <a
                        href="/author/pedro-coelho"
                      >
                        Pedro Coelho
                      </a>
                    </span>
                    <span>
                      <svg
                        aria-hidden="true"
                        class="c2"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        viewBox="0 0 24 24"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 18H4V10h16v11zm0-13H4V5h16v3z"
                        />
                      </svg>
                      19 de abr. de 2020
                    </span>
                  </div>
                  <h2
                    class="c8 c13"
                  >
                    <a
                      href="/post/al-sadd-anuncia-acordo-para-liberar-xavi-mas-barcelona-nega"
                    >
                      Al Sadd anuncia acordo para liberar Xavi, mas Barcelona nega
                    </a>
                  </h2>
                  <p
                    class="c22"
                  >
                    A novela continua: Barcelona vê em anúncio de acerto do Al Sadd como uma forma de pressão para o pagamento da multa.
                  </p>
                </div>
              </div>
              <div
                class="c18"
              >
                <div
                  class="c19"
                >
                  <a
                    href="/post/com-dois-penaltis-napoli-vira-contra-o-legia-e-se-recupera-em-seu-grupo-da-liga-europa"
                  >
                    <img
                      alt=""
                      class="c20"
                      src="https://res.cloudinary.com/rabbitz/image/upload/v1636129861/zielinski_napoli_9359de0d9d.jpg"
                    />
                  </a>
                </div>
                <div
                  class=""
                >
                  <div
                    class="c21"
                  >
                    <span>
                      <svg
                        aria-hidden="true"
                        class="c2"
                        fill="currentColor"
                        focusable="false"
                        height="18"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM7.07 18.28c.43-.9 3.05-1.78 4.93-1.78s4.51.88 4.93 1.78C15.57 19.36 13.86 20 12 20s-3.57-.64-4.93-1.72zm11.29-1.45c-1.43-1.74-4.9-2.33-6.36-2.33s-4.93.59-6.36 2.33A7.95 7.95 0 014 12c0-4.41 3.59-8 8-8s8 3.59 8 8c0 1.82-.62 3.49-1.64 4.83zM12 6c-1.94 0-3.5 1.56-3.5 3.5S10.06 13 12 13s3.5-1.56 3.5-3.5S13.94 6 12 6zm0 5c-.83 0-1.5-.67-1.5-1.5S11.17 8 12 8s1.5.67 1.5 1.5S12.83 11 12 11z"
                        />
                      </svg>
                      <a
                        href="/author/pedro-coelho"
                      >
                        Pedro Coelho
                      </a>
                    </span>
                    <span>
                      <svg
                        aria-hidden="true"
                        class="c2"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        viewBox="0 0 24 24"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 18H4V10h16v11zm0-13H4V5h16v3z"
                        />
                      </svg>
                      21 de abr. de 2020
                    </span>
                  </div>
                  <h2
                    class="c8 c13"
                  >
                    <a
                      href="/post/com-dois-penaltis-napoli-vira-contra-o-legia-e-se-recupera-em-seu-grupo-da-liga-europa"
                    >
                      Com dois pênaltis, Napoli vira contra o Legia e se recupera em seu grupo da Liga Europa
                    </a>
                  </h2>
                  <p
                    class="c22"
                  >
                    Após levar apenas um ponto nas duas primeiras rodadas, o Napoli chegou a sete se colocou em situação mais confortável para a reta final.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
    >
      <footer
        class="c23"
      >
        <div
          class="c24"
        >
          <p>
            Footer do Blog
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c25"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c2"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`

exports[`<PostsTemplate /> should match snapshot without posts 1`] = `
.c0 {
  width: 100%;
  max-width: 130rem;
  margin-left: auto;
  margin-right: auto;
  padding-left: calc(3.2rem / 2);
  padding-right: calc(3.2rem / 2);
}

.c9 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c13 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: none;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c16 {
  width: 100%;
  margin: 0 auto;
}

.c17 {
  padding: 3.2rem;
  text-align: center;
  font-size: 2.4rem;
}

.c18 {
  margin: 0 auto;
  display: grid;
  grid-template-columns: 1fr;
  gap: 6.4rem;
}

.c20 {
  font-size: calc(1.6rem + 0.2rem);
  line-height: 1.5;
}

.c20 p {
  margin: 4.0rem 0;
}

.c20 a,
.c20 a:visited,
.c20 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c20 a:hover {
  -webkit-filter: brightness(0.8);
  filter: brightness(0.8);
}

.c20 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c20 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  width: 100%;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c20 pre code {
  color: inherit;
  background: inherit;
}

.c20 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c20 img {
  max-width: 100%;
}

.c20 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c20 .image figcaption {
  font-size: 1.6rem;
  padding: 0.8rem;
  text-align: center;
  line-height: 1.3;
}

.c20 ul,
.c20 ol {
  margin: 2.4rem 4.0rem;
}

.c20 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c20 table {
  width: 100%;
  border-collapse: collapse;
  margin: 2.4rem 0;
}

.c20 table td,
.c20 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c20 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c19 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c19 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c21 {
  cursor: pointer;
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c11 > img {
  height: 15rem;
  width: 15rem;
  border-radius: 50%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 6.4rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
  gap: 3rem;
}

.c7 .c8 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c7 .c10 > img {
  border-radius: 50%;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 48rem;
}

.c3 {
  background: #000000;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 1;
  width: 100%;
  max-width: 26rem;
  height: 100vh;
  top: 0;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  left: -24rem;
  overflow-y: hidden;
}

.c4 {
  margin: 4.8rem auto;
  width: 100%;
}

.c1 {
  position: fixed;
  top: 2.4rem;
  background: #000000;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  left: 0.5rem;
  top: 2rem;
  color: #FFFFFF;
}

.c5 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.c5:hover {
  border-color: #dc143c;
  color: #dc143c;
}

.c6 {
  margin-top: 6.4rem;
}

.c14 {
  margin-bottom: 6.4rem;
}

.c15 {
  display: grid;
  grid-template-columns: 70% 30%;
}

@media (min-width:768px) {
  .c0 {
    padding-left: calc(3.2rem * 0.7);
    padding-right: calc(3.2rem * 0.7);
  }
}

@media (max-width:768px) {
  .c9 {
    font-size: calc(1.6rem * 1.2);
  }
}

@media (max-width:768px) {
  .c13 {
    font-size: calc(1.6rem * 1.2);
  }
}

@media (min-width:768px) {
  .c20 .image-style-side {
    float: right;
    max-width: 50%;
    margin: 2.4rem;
  }
}

@media (max-width:768px) {
  .c20 {
    font-size: 2rem;
  }
}

@media (max-width:450px) {
  .c11 > img {
    height: 10rem;
    width: 10rem;
  }
}

@media (max-width:450px) {
  .c7 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    gap: 1rem;
  }

  .c7 .c8 {
    text-align: center;
  }
}

@media (max-width:768px) {
  .c3 {
    left: -26rem;
  }
}

@media (max-width:768px) {
  .c1 {
    left: 0rem;
  }
}

@media (max-width:1170px) {
  .c15 {
    grid-template-columns: 1fr;
  }
}

<div>
  <div
    class="c0"
  >
    <a
      aria-label="Open or close menu"
      class="c1"
      href="#"
      title="Open menu"
    >
      <svg
        aria-hidden="true"
        aria-label="Open menu"
        class="c2"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </a>
    <main
      aria-hidden="true"
      class="c3"
    >
      <nav
        class="c4"
      >
        <a
          class="c5"
          href="/"
          target="_self"
        >
          home
        </a>
        <a
          class="c5"
          href="/contact"
          target="_self"
        >
          contact
        </a>
      </nav>
    </main>
    <div
      class="c6"
    >
      <div
        class="c0"
      >
        <header
          class="c7"
        >
          <h1
            class="c8 c9"
          >
            <a
              class="c10 c11"
              href="/"
              target="_self"
            >
              <img
                alt="Pedro Coelho Blog"
                src="/assets/images/me.jpg"
              />
            </a>
          </h1>
          <div
            class="c12"
          >
            <h2
              class="c8 c13"
            >
              Pedro Coelho
            </h2>
            <p
              class=""
            >
              Uma descrição para o seu blog.
            </p>
          </div>
        </header>
      </div>
    </div>
    <div
      class="c14"
    >
      <div
        class="c15"
      >
        <div
          class="c0"
        >
          <div
            class="c16"
          >
            <p
              class="c17"
            >
              Nenhum post encontrado aqui
            </p>
            <div
              class="c18"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
    >
      <footer
        class="c19"
      >
        <div
          class="c20"
        >
          <p>
            Footer do Blog
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c21"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c2"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`
